# unify-android

./: .gitmodules  README.md
unify/: .gitignore  README.md  gradle.properties  pubspec.yaml
unify/android/: build.gradle  gradle.properties  settings.gradle
unify/android/app/: build.gradle
unify/android/app/src/debug/: AndroidManifest.xml
unify/android/app/src/main/: AndroidManifest.xml
unify/android/app/src/main/assets/exes/arm64-v8a/: tun2socks
unify/android/app/src/main/assets/exes/armeabi-v7a/: tun2socks
unify/android/app/src/main/assets/exes/x86/: tun2socks
unify/android/app/src/main/assets/exes/x86_64/: tun2socks
unify/android/app/src/main/jni/: Android.mk  CMakeLists.txt  build-shared-executable.mk
unify/android/app/src/main/kotlin/com/unifyproxy/unify/: MainActivity.kt
unify/android/app/src/main/kotlin/com/unifyproxy/unify/services/: UnifyVpnService.kt
unify/android/gradle/wrapper/: gradle-wrapper.properties
unify/android/libmv2ray/: build.gradle
unify/ios/Flutter/: flutter_export_environment.sh
unify/ios/Runner/: Info.plist
unify/ios/Runner.xcodeproj/: project.pbxproj
unify/lib/: global.dart  main.dart  utils.dart
unify/lib/bloc/: proxy_info.dart  proxy_list.dart  subscription.dart
unify/lib/pages/main/: appbar.dart  bottombar.dart  drawer.dart  mainpage.dart  mainpage_content.dart  proxy_listview.dart
unify/lib/pages/main/states/: bottom_bar.dart  bottombar_state.dart
unify/lib/pages/proxy_info/: proxy_info.dart
unify/lib/pages/setting/: setting.dart
unify/lib/pages/subscription/: new_sub.dart  subscription.dart
unify/lib/widgets/main/: MainWidget.dart
unify/lib/widgets/main/views/: mainAppBar.dart  mainPage.dart
unify/test/: widget_test.dart
unify/test/bloc/: subscription_test.dart
